The Magic Coding Language/core/bin/main/SorceryScriptParser 2.g4
parser grammar SorceryScriptParser;

options { tokenVocab=SorceryScriptLexer; }

script      : (statement SEMI)* ;

statement   : castStmt
            | summonStmt
            ;

castStmt    : CAST ID FROM ID WITH NUMBER ID ;
summonStmt  : SUMMON ID AT LPAREN coordList RPAREN USING ID ;

coordList   : coord (COMMA coord)* ;
coord       : ID COLON NUMBER ; 
